--- a/index.html
+++ b/index.html
@@ -30,15 +30,13 @@
     <div class="vertical">
         <div class="main-header-content inner">
             <h1 class="page-title">Web App Bank</h1>
-            <h2 class="page-description">## English
-
-We live in the age when we can deploy web apps without command line interface,
-as represented by https://devcenter.heroku.com/articles/heroku-button[Heroku Button]
+            <h2 class="page-description">We live in the age when we can deploy web apps without command line interface,
+as represented by Heroku Button
 I&#x27;ll introduce you such web apps.
 
-== 日本語
+-----
 
-https://devcenter.heroku.com/articles/heroku-button[Heroku Button]
+Heroku Button
 に代表されるように、コマンドラインインターフェース無しで個人用にウェブアプリを使える時代がやって来ました。
 GitHub から直接デプロイ可能なウェブアプリを紹介していきます。</h2>
         </div>
