--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <title>Web App Bank</title>
-    <meta name="description" content="## English
-
-We live in the age when we can deploy web apps without command line interface,
+    <meta name="description" content="We live in the age when we can deploy web apps without command line interface,
 as represented by https://devcenter.heroku.com/articles/heroku-button[Heroku Button]
 I&#x27;ll introduce you such web apps." />
 
@@ -34,9 +32,7 @@ I&#x27;ll introduce you such web apps." />
     <div class="vertical">
         <div class="main-header-content inner">
             <h1 class="page-title">Web App Bank</h1>
-            <h2 class="page-description">## English
-
-We live in the age when we can deploy web apps without command line interface,
+            <h2 class="page-description">We live in the age when we can deploy web apps without command line interface,
 as represented by https://devcenter.heroku.com/articles/heroku-button[Heroku Button]
 I&#x27;ll introduce you such web apps.</h2>
         </div>
