--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 
     <title>Web App Bank</title>
     <meta name="description" content="We live in the age when we can deploy web apps without command line interface,
-as represented by https://devcenter.heroku.com/articles/heroku-button[Heroku Button]
-I&#x27;ll introduce you such web apps." />
+as represented by Heroku Button. I&#x27;ll introduce you such web apps." />
 
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -33,8 +32,7 @@ I&#x27;ll introduce you such web apps." />
         <div class="main-header-content inner">
             <h1 class="page-title">Web App Bank</h1>
             <h2 class="page-description">We live in the age when we can deploy web apps without command line interface,
-as represented by https://devcenter.heroku.com/articles/heroku-button[Heroku Button]
-I&#x27;ll introduce you such web apps.</h2>
+as represented by Heroku Button. I&#x27;ll introduce you such web apps.</h2>
         </div>
     </div>
     <a class="scroll-down icon-arrow-left" href="#content" data-offset="-45"><span class="hidden">Scroll Down</span></a>
